--- a/tiffany.html
+++ b/tiffany.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">how to develop own website</a></section><section class="mbr-section content5 cid-r6Qg8n0nlW" id="content5-4r">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="mbr-section content5 cid-r6Qg8n0nlW" id="content5-4r">
 
     
 
@@ -158,7 +158,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="YBzt7MD5oUptZ1PuNtN5o2pm110eZHZKQxj3+593c1DnxmSZZdVoyNcTXWTjc6tFrLEWkQ0jQIOLQjCK7ZORqoH4ZU2d1xKRxOgdf1BC5c8SE2WRs0ZLk2vxyjhFSoP7">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Fg322qUxDhbM864H+BTFTbNwEFTySirJGf2e9AoKKgidTihB4hnz+PY0zaq69O61+D5ipYfGoOcSc+lQMtVa/3OqAkNnsYPewDLZrdY9Ynt0Gz8Hi+c8ekcyAhCYCzpY">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
