--- a/cyndi.html
+++ b/cyndi.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -158,7 +158,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="0hJsFR5JEeiCTi+N75nIqHMMsPqmGczjNPK10Q5pMvn7L/E5dkjidSVWgyTr/OP9dpN2Y27ebzHn+UmCdALSW/4ZIC1o1lKn14tLFZ3S8DZ15/Q9yku27aohA0QGhqil">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="sxAq/kZgEcn4gwlNrZY0++pbhcxsl9tM8tvWM3F4ZN/o33XBXBIKrpfBE4I6ZdthZ7abESUfOQs8vIN/620DeOfRvZSMWscxxz5dw2rckp/b3lXspKcjnECskjfQaRhx">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
