create github pages

--- a/becky.html
+++ b/becky.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">how to develop own website</a></section><section class="mbr-section content5 cid-r6Qg4II7iO" id="content5-4p">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="mbr-section content5 cid-r6Qg4II7iO" id="content5-4p">
 
     
 
@@ -158,7 +158,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="p7M30heR8s8R9h2ybRaW1asdUbur0pXjtKf1Bfa9RjYCohy50ehwAXVs3hP6wXYdB6EgJJEH/AlEJ78aPR0jzxoHRFDSLBwShmWCrwn864b7+S4dyVIiLJQNYsAiaiFw">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="R5rZNkZ5xMkAWF6rMI+OYJXPucsuauddJJPKuo618WZt5gjRi5oXM2IcUcC9It7M6AzIPXYg9nQKrqH/4i50NstdM4qf+TSdD7JwBZ47E/YYYyTeTvL2gb7l7ccjsZ5N">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
