--- a/community.html
+++ b/community.html
@@ -83,7 +83,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best css templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
+<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
 
     
 
@@ -162,7 +162,7 @@
 
     <figure class="mbr-figure container">
         <div class="image-block" style="width: 39%;">
-            <img src="assets/images/evan-kramer-1-cf-canva-1080x1080.png" width="1400" alt="Mobirise" title="">
+            <img src="assets/images/brayden-taylor-wca-canva-866x866.png" width="1400" alt="Mobirise" title="">
             
         </div>
     </figure>
@@ -174,12 +174,12 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><p>Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, Evan Kramer!
-<span style="font-size: 1.1rem;"></span></p><p>Evan is a senior at Camden-Frontier High School where he is active in the band. He is also involved with the Hillsdale UB church and the LavaLink Teen Youth Center.
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><p>Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, Brayden Taylor!
+<span style="font-size: 1.1rem;"></span></p><p>Brayden is in the 8th grade at Will Carleton Academy where he is a member of the Basketball, Baseball, and Football teams. He is also active volunteering in the community.
 </p><p>
-<span style="font-size: 1.1rem;">According to Mr. Forrister, “Evan is always respectable and genuine. He is always looking to better himself and wanting to help and assist in any way possible. He is the sort of student that you want to have and hope others try to aspire to be like.”&nbsp;</span><span style="font-size: 1.1rem;"></span></p><p>Evan plans to attend college after graduation.
-</p><p>
-<span style="font-size: 1.1rem;">Congratulations, Evan! Keep up your great work.</span></p></div>
+<span style="font-size: 1.1rem;">According to Mrs. Tina Watkins, “Brayden has had a great start to the school year! He has worked diligently, in the classroom and while absent, to complete all assignments. He has had a great attitude and has proven to be a responsible student entrusted with tasks outside of the classroom. I am so proud of the growth and maturity I have seen in Brayden from 7th grade to 8th grade.”&nbsp;</span></p><p>
+<span style="font-size: 1.1rem;">After high school, Brayden plans to attend college to study technology.&nbsp;</span></p><p>
+<span style="font-size: 1.1rem;">Congratulations, Brayden! Keep up your great work.</span></p></div>
         </div>
     </div>
 </section>
@@ -199,11 +199,11 @@
                     <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content">
                         <div class="card">
                             <div class="card-header" role="tab" id="headingOne">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_97" aria-expanded="false" aria-controls="collapse1">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_96" aria-expanded="false" aria-controls="collapse1">
                                     <h4 class="mbr-fonts-style display-5">About The Program</h4>
                                 </a>
                             </div>
-                            <div id="collapse1_97" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                            <div id="collapse1_96" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">At Barrett Insurance we believe in the importance of education. To show our commitment, we developed the Barrett Insurance "Student of the Week Award of Excellence" to honor our local students. We continue to highlight select students from around the region to showcase their scholastic acumen and impressive achievements. 
 <br>
@@ -215,12 +215,12 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingTwo">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_97" aria-expanded="false" aria-controls="collapse2">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_96" aria-expanded="false" aria-controls="collapse2">
                                     <h4 class="mbr-fonts-style display-5">Participating Schools</h4>
                                 </a>
 
                             </div>
-                            <div id="collapse2_97" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                            <div id="collapse2_96" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">Camden-Frontier 
 <br>Jonesville 
