--- a/Daniel.html
+++ b/Daniel.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -158,7 +158,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="oNqrSh3DgsMt4Xkb+vEg9me4L7U7Qz5OWrSRcj9cgNQ1s/F9ZF42i9pT2G0/QYT861lCAuSm5Zx6kjNdGdNQoHIPJIl69Hu2kKW3EF49p6FpSA4fKNrNYCf1II3IRrkq">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DjY4/+Pc0Sfyqkplw1OFxt4k+DK0yxzGHwgeqhZi9OWsFRE6FAxD2i8KSfKe94XvEn6lPmskrTJh/OH7pL4Efta8FePOZ+3rUlCG6oaATJWP4Fye80rO3lrfoZqllDrd">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
