--- a/cyndi.html
+++ b/cyndi.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -158,7 +158,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="e6gMZBKdnrDyQGuePBiRE6WXWpgkAPPnJBCA6XhQUwjrUUy1q/nwF+oPUvHvtFXNyOchk+jIlArAw7A/v/Z6eYq2dmzSzib3eFT7Y7ELJuYPptxAvPkjjW3VMvFqLVvQ">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="btlJliul3uee11xs62mI/z4yXVbmIp51aTPkGZ+l7fm7TQAz3bmt36bApMrPBiYHVkG8M3WA9uVZc3woy+fZ6ucChpG7YR7WhRL3b8NSCEwL8/M/5uwsnu/BZjgpl/t2">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
