create github pages

--- a/community.html
+++ b/community.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
 
     
 
@@ -161,8 +161,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><p>At Barrett Insurance we believe in the importance of education. To show our commitment, we developed the Barrett Insurance "Student of the Week Award of Excellence" to honor our local students. We continue to highlight select students from around the region to showcase their scholastic acumen and impressive achievements. 
-</p><p>
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><p><span style="font-size: 1.1rem;">At Barrett Insurance we believe in the importance of education. To show our commitment, we developed the Barrett Insurance "Student of the Week Award of Excellence" to honor our local students. We continue to highlight select students from around the region to showcase their scholastic acumen and impressive achievements.</span><br></p><p>
 <span style="font-size: 1.1rem;">Each Friday, we take the time to post our award recipients on social media. Be sure to pay close attention to our Facebook, Twitter, and LinkedIn pages. We also feature award recipients on WCSR, Fridays and during Detroit Tigers games. &nbsp;</span></p><p>
 <span style="font-size: 1.1rem;">Local schools choose recipients of the Barrett Insurance Student of the Week Award of Excellence for various reasons. Some schools choose to highlight students based on more traditional indicators like academic and athletic prowess. Some schools recognize students who otherwise contribute to their school’s unique and robust culture. Great classmate, hard worker, positive attitude – school administrators often use these merits to select which students to highlight with our award.&nbsp;</span></p><p>For more information or if you are a teacher looking to nominate a student, please reach out to Daniel for more information.</p></div>
         </div>
