--- a/Daniel.html
+++ b/Daniel.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page for free</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -158,7 +158,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pZ6kq0ylHDt/+lbybKGBBdXqskDUJuz271QiefTl5ZkpPl38Cwzjzuo99PMCpWbig1EN437i2WJTsl1reBFnxt+HRWV18vCat7ykgaXhh2vAxQinErocJn2LnZ+fXu5w">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="o4E8ucEZP1Mf6Mu6x1LRRfv7+8gm+S38Rss/SP7HU94bnuPVLC8o4sTQkrU9/gdhcg7FzJMOKw7jzLvpL8nJMAFe3PQjgfXQCJIccwhnJIzW+Yne5M64DbOjceepxqyz">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
